data/derived/sp14/progs/unify/prog3784.ml.out
Characters 70-78:
  | true  -> digOfIntHelper::[n mod 10] 
                              ^^^^^^^^
Error: This expression has type int but an expression was expected of type
         int -> int
